# BasiDiDati_Pizzeria

./: Dump20220124.sql  Pizzeria.sql  Procedure_Add_Cameriere.sql  Procedure_Aggiungi_Tavoli.sql  Procedure_Aggiungi_Turno.sql  Procedure_AssegnaTurno.sql  Procedure_AssegnaTurnoTavolo.sql  Procedure_Visualizza_Tavoli_Liberi.sql  Procedure_aggiungi_cliente.sql  README.md
Basi_Dati/: Progetto Basi Dati.docx  (+3 more)
final-example-airport/: CMakeLists.txt  Makefile  airport.mwb  main.c
final-example-airport/controller/: agenzia.c  agenzia.h  amministratore.c  amministratore.h  login.c  login.h
final-example-airport/model/: db.c  db.h
final-example-airport/utils/: db.c  db.h  dotenv.c  io.c  io.h  validation.c  validation.h
final-example-airport/view/: agenzia.c  agenzia.h  amministratore.c  amministratore.h  login.c  login.h
progettoBasiDiDati/ProgettoFinaleBasi/: CMakeLists.txt  FindMySQL.cmake  Makefile  client  main.c
progettoBasiDiDati/ProgettoFinaleBasi/View/: baristaView.c  baristaView.h  cameriereView.c  cameriereView.h  loginView.c  loginView.h  managerView.c  managerView.h  pizzaioloView.c  pizzaioloView.h
progettoBasiDiDati/ProgettoFinaleBasi/controller/: controllerBarista.c  controllerBarista.h  controllerCameriere.c  controllerCameriere.h  controllerLogin.c  controllerLogin.h  controllerManager.c  controllerManager.h  controllerPizzaiolo.c  controllerPizzaiolo.h
progettoBasiDiDati/ProgettoFinaleBasi/model/: db.c  db.h
progettoBasiDiDati/ProgettoFinaleBasi/users/: Barista.json  Cameriere.json  Manager.json  Pizzaiolo.json  login.json
progettoBasiDiDati/ProgettoFinaleBasi/util/: defines.h  inout.c  parse.c  utils.c
(+2 files in other folders)
